--- a/checklist/template/section.html
+++ b/checklist/template/section.html
@@ -1,4 +1,4 @@
-<section class="section--center mdl-grid mdl-shadow--2dp">
+<section class="section--center mdl-grid mdl-shadow--2dp" id="{{ label }}">
 	<h5 class="title">{{ sectionName }}</h5>
 	{% for item in questions %}
 		{% include "question.html" %}
