--- a/checklist/template/question.html
+++ b/checklist/template/question.html
@@ -1,27 +1,24 @@
-<div class="mdl-card">
-	<div class="mdl-card__supporting-text">                
-		{{ item.name }}?
-	</div>
+<div class="mdl-card question-section">
+	<div class="mdl-card__supporting-text question-name">{{ sectionIndex + loop.index }}) {{ item.name }}?</div>
 	<div class="mdl-card__actions">
-		<label  class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="option-{{ label }}-{{ loop.index }}1">
-		<input type="radio" id="option-{{ label }}-{{ loop.index }}1" class="mdl-radio__button" name="question-{{ label }}-{{ loop.index }}" value="1">
-		<span class="mdl-radio__label ">OK</span>
-		</label >
-		<label  class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="option-{{ label }}-{{ loop.index }}2">
-		<input type="radio" id="option-{{ label }}-{{ loop.index }}2" class="mdl-radio__button" name="question-{{ label }}-{{ loop.index }}" value="0">
-		<span class="mdl-radio__label ">N/A</span>
-		</label >
-		<label  class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="option-{{ label }}-{{ loop.index }}3">
-		<input type="radio" id="option-{{ label }}-{{ loop.index }}3" class="mdl-radio__button" name="question-{{ label }}-{{ loop.index }}" value="-1">
-		<span class="mdl-radio__label ">Fuu</span>
-		</label >
-		<label  class="">
-		<input type="file" accept="image/*;capture=camera">
-		<span class="mdl-radio__label ">Foto</span>
-		</label >
+		<label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="option-{{ sectionIndex + loop.index0 }}1">
+		<input type="radio" id="option-{{ sectionIndex + loop.index0 }}1" class="mdl-radio__button" name="question-{{ sectionIndex + loop.index0 }}" value="Conforme">
+		<span class="mdl-radio__label ">C</span>
+		</label>
+		<label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="option-{{ sectionIndex + loop.index0 }}2">
+		<input type="radio" id="option-{{ sectionIndex + loop.index0 }}2" class="mdl-radio__button" name="question-{{ sectionIndex + loop.index0 }}" value="NC">
+		<span class="mdl-radio__label ">NC</span>
+		</label>
+		<label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="option-{{ sectionIndex + loop.index0 }}3">
+		<input type="radio" id="option-{{ sectionIndex + loop.index0 }}3" class="mdl-radio__button" name="question-{{ sectionIndex + loop.index0 }}" value="NA">
+		<span class="mdl-radio__label ">NA</span>
+		</label>
+		<div style="display:block; margin-top:10px;">
+			<div id="wrapper-image-{{ sectionIndex + loop.index0 }}"></div>
+			<button type="button" style="display:block; margin-top:10px;" class="add-image" data-id="{{ sectionIndex + loop.index0 }}">Adicionar Foto</button>
+		</div>
 		<div class="mdl-textfield mdl-js-textfield" style="display:block;">
-			<textarea class="mdl-textfield__input" type="text" rows= "3" id="question-obs-{{ label }}-{{ loop.index }}" name="question-obs-{{ label }}-{{ loop.index }}"></textarea>
-			<label  class="mdl-textfield__label " for="question-obs-{{ label }}-{{ loop.index }}">Obs...</label >
+			<textarea class="mdl-textfield__input" placeholder="Obs" type="text" rows= "3" id="question-obs-{{ sectionIndex + loop.index0 }}" name="question-obs-{{ sectionIndex + loop.index0 }}"></textarea>
 		</div>
 	</div>
 </div>
