add images on obs + confirm on submit and reset

--- a/checklist/template/info.html
+++ b/checklist/template/info.html
@@ -47,4 +47,8 @@
 	<div class="mdl-textfield mdl-js-textfield">
 		<textarea class="mdl-textfield__input" name="checklist-obs" placeholder="..."></textarea>
 	</div>
+	<div style="display:block; margin-top:10px;">
+		<div id="wrapper-image-obs"></div>
+		<button type="button" style="display:block; margin-top:10px;" class="add-image" data-id="obs">Adicionar Foto</button>
+	</div>
 </section>
